specifications/.antlr/GrammarParser.java
// Generated from c:/Users/guill/Desktop/DLP-2425-ANTLR/specifications/Grammar.g4 by ANTLR 4.13.1

    import ast.*;
    import ast.type.*;
    import ast.declaration.*;
    import ast.statement.*;
    import ast.expression.*;
    
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		LITENT=39, LITREAL=40, CHAR_LITERAL=41, ID=42, LINE_COMMENT=43, MULTILINE_COMMENT=44, 
		WS=45;
	public static final int
		RULE_program = 0, RULE_structDeclaration = 1, RULE_variableDeclaration = 2, 
		RULE_variables = 3, RULE_functionDeclaration = 4, RULE_parameterList = 5, 
		RULE_statement = 6, RULE_statements = 7, RULE_expression = 8, RULE_expressionList = 9, 
		RULE_type = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "structDeclaration", "variableDeclaration", "variables", "functionDeclaration", 
			"parameterList", "statement", "statements", "expression", "expressionList", 
			"type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "':'", "';'", "'}'", "'var'", "'('", "')'", 
			"','", "'print'", "'printsp'", "'println'", "'read'", "'if'", "'else'", 
			"'while'", "'return'", "'='", "'<'", "'>'", "'.'", "'['", "']'", "'!'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
			"'||'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "LITENT", "LITREAL", "CHAR_LITERAL", "ID", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Declaration> declarations = new ArrayList<>();
		public StructDeclarationContext structDeclaration;
		public VariableDeclarationContext variableDeclaration;
		public FunctionDeclarationContext functionDeclaration;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<StructDeclarationContext> structDeclaration() {
			return getRuleContexts(StructDeclarationContext.class);
		}
		public StructDeclarationContext structDeclaration(int i) {
			return getRuleContext(StructDeclarationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4398046511170L) != 0)) {
				{
				setState(31);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(22);
					((ProgramContext)_localctx).structDeclaration = structDeclaration();
					 _localctx.declarations.add(((ProgramContext)_localctx).structDeclaration.ast); 
					}
					break;
				case T__5:
					{
					setState(25);
					((ProgramContext)_localctx).variableDeclaration = variableDeclaration();
					 _localctx.declarations.add(((ProgramContext)_localctx).variableDeclaration.ast); 
					}
					break;
				case ID:
					{
					setState(28);
					((ProgramContext)_localctx).functionDeclaration = functionDeclaration();
					 _localctx.declarations.add(((ProgramContext)_localctx).functionDeclaration.ast); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(_localctx.declarations); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclarationContext extends ParserRuleContext {
		public StructDeclaration ast;
		public List<VariableDeclaration> lista = new ArrayList<>();
		public Token s;
		public Token ID;
		public TypeContext type;
		public List<TerminalNode> ID() { return getTokens(GrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GrammarParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStructDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStructDeclaration(this);
		}
	}

	public final StructDeclarationContext structDeclaration() throws RecognitionException {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_structDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			setState(40);
			((StructDeclarationContext)_localctx).s = match(ID);
			setState(41);
			match(T__1);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(42);
				((StructDeclarationContext)_localctx).ID = match(ID);
				setState(43);
				match(T__2);
				setState(44);
				((StructDeclarationContext)_localctx).type = type();
				setState(45);
				match(T__3);
				 _localctx.lista.add(new VariableDeclaration(((StructDeclarationContext)_localctx).ID, ((StructDeclarationContext)_localctx).type.ast)); 
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(T__4);
			 ((StructDeclarationContext)_localctx).ast =  new StructDeclaration(((StructDeclarationContext)_localctx).s, _localctx.lista); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public VariableDeclaration ast;
		public Token ID;
		public TypeContext type;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__5);
			setState(57);
			((VariableDeclarationContext)_localctx).ID = match(ID);
			setState(58);
			match(T__2);
			setState(59);
			((VariableDeclarationContext)_localctx).type = type();
			setState(60);
			match(T__3);
			 ((VariableDeclarationContext)_localctx).ast =  new VariableDeclaration(((VariableDeclarationContext)_localctx).ID, ((VariableDeclarationContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesContext extends ParserRuleContext {
		public List<VariableDeclaration> ast = new ArrayList<VariableDeclaration>();
		public VariableDeclarationContext variableDeclaration;
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVariables(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(63);
				((VariablesContext)_localctx).variableDeclaration = variableDeclaration();
				 _localctx.ast.add(((VariablesContext)_localctx).variableDeclaration.ast); 
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public FunctionDeclaration ast;
		public Token ID;
		public ParameterListContext parameterList;
		public VariablesContext variables;
		public StatementsContext statements;
		public TypeContext type;
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDeclaration);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((FunctionDeclarationContext)_localctx).ID = match(ID);
				setState(72);
				match(T__6);
				setState(73);
				((FunctionDeclarationContext)_localctx).parameterList = parameterList();
				setState(74);
				match(T__7);
				setState(75);
				match(T__1);
				setState(76);
				((FunctionDeclarationContext)_localctx).variables = variables();
				setState(77);
				((FunctionDeclarationContext)_localctx).statements = statements();
				setState(78);
				match(T__4);
				 ((FunctionDeclarationContext)_localctx).ast =  new FunctionDeclaration(((FunctionDeclarationContext)_localctx).ID, ((FunctionDeclarationContext)_localctx).parameterList.ast, new VoidType(), ((FunctionDeclarationContext)_localctx).variables.ast, ((FunctionDeclarationContext)_localctx).statements.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				((FunctionDeclarationContext)_localctx).ID = match(ID);
				setState(82);
				match(T__6);
				setState(83);
				((FunctionDeclarationContext)_localctx).parameterList = parameterList();
				setState(84);
				match(T__7);
				setState(85);
				match(T__2);
				setState(86);
				((FunctionDeclarationContext)_localctx).type = type();
				setState(87);
				match(T__1);
				setState(88);
				((FunctionDeclarationContext)_localctx).variables = variables();
				setState(89);
				((FunctionDeclarationContext)_localctx).statements = statements();
				setState(90);
				match(T__4);
				 ((FunctionDeclarationContext)_localctx).ast =  new FunctionDeclaration(((FunctionDeclarationContext)_localctx).ID, ((FunctionDeclarationContext)_localctx).parameterList.ast, ((FunctionDeclarationContext)_localctx).type.ast, ((FunctionDeclarationContext)_localctx).variables.ast, ((FunctionDeclarationContext)_localctx).statements.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<VariableDeclaration> ast = new ArrayList<>();
		public Token ID;
		public TypeContext type;
		public List<TerminalNode> ID() { return getTokens(GrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GrammarParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(95);
				((ParameterListContext)_localctx).ID = match(ID);
				setState(96);
				match(T__2);
				setState(97);
				((ParameterListContext)_localctx).type = type();
				 _localctx.ast.add(new VariableDeclaration(((ParameterListContext)_localctx).ID, ((ParameterListContext)_localctx).type.ast)); 
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(99);
					match(T__8);
					setState(100);
					((ParameterListContext)_localctx).ID = match(ID);
					setState(101);
					match(T__2);
					setState(102);
					((ParameterListContext)_localctx).type = type();
					 _localctx.ast.add(new VariableDeclaration(((ParameterListContext)_localctx).ID, ((ParameterListContext)_localctx).type.ast)); 
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public ExpressionListContext expressionList;
		public ExpressionContext expression;
		public StatementsContext statements;
		public StatementsContext s1;
		public StatementsContext s2;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public Token ID;
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(T__9);
				setState(113);
				((StatementContext)_localctx).expressionList = expressionList();
				setState(114);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Print(((StatementContext)_localctx).expressionList.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(T__10);
				setState(118);
				((StatementContext)_localctx).expressionList = expressionList();
				setState(119);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Printsp(((StatementContext)_localctx).expressionList.ast); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				match(T__11);
				setState(123);
				((StatementContext)_localctx).expressionList = expressionList();
				setState(124);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Println(((StatementContext)_localctx).expressionList.ast); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				match(T__12);
				setState(128);
				((StatementContext)_localctx).expression = expression(0);
				setState(129);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Read(((StatementContext)_localctx).expression.ast); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				match(T__13);
				setState(133);
				match(T__6);
				setState(134);
				((StatementContext)_localctx).expression = expression(0);
				setState(135);
				match(T__7);
				setState(136);
				match(T__1);
				setState(137);
				((StatementContext)_localctx).statements = statements();
				setState(138);
				match(T__4);
				 ((StatementContext)_localctx).ast =  new If(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).statements.ast, null); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				match(T__13);
				setState(142);
				match(T__6);
				setState(143);
				((StatementContext)_localctx).expression = expression(0);
				setState(144);
				match(T__7);
				setState(145);
				match(T__1);
				setState(146);
				((StatementContext)_localctx).s1 = statements();
				setState(147);
				match(T__4);
				setState(148);
				match(T__14);
				setState(149);
				match(T__1);
				setState(150);
				((StatementContext)_localctx).s2 = statements();
				setState(151);
				match(T__4);
				 ((StatementContext)_localctx).ast =  new If(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).s1.ast, ((StatementContext)_localctx).s2.ast); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(154);
				match(T__15);
				setState(155);
				match(T__6);
				setState(156);
				((StatementContext)_localctx).expression = expression(0);
				setState(157);
				match(T__7);
				setState(158);
				match(T__1);
				setState(159);
				((StatementContext)_localctx).statements = statements();
				setState(160);
				match(T__4);
				 ((StatementContext)_localctx).ast =  new While(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).statements.ast); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(163);
				match(T__16);
				setState(164);
				((StatementContext)_localctx).expression = expression(0);
				setState(165);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Return(((StatementContext)_localctx).expression.ast); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(168);
				match(T__16);
				setState(169);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Return(null); _localctx.ast.updatePositions(_localctx.start);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(171);
				((StatementContext)_localctx).e1 = expression(0);
				setState(172);
				match(T__17);
				setState(173);
				((StatementContext)_localctx).e2 = expression(0);
				setState(174);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new Asignacion(((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).e2.ast); 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(177);
				((StatementContext)_localctx).ID = match(ID);
				setState(178);
				match(T__6);
				setState(179);
				((StatementContext)_localctx).expressionList = expressionList();
				setState(180);
				match(T__7);
				setState(181);
				match(T__3);
				 ((StatementContext)_localctx).ast =  new FuncionLlamada(((StatementContext)_localctx).ID, ((StatementContext)_localctx).expressionList.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8246354738304L) != 0)) {
				{
				{
				setState(186);
				((StatementsContext)_localctx).statement = statement();
				 _localctx.ast.add(((StatementsContext)_localctx).statement.ast); 
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
